Fix Navbar Right margin Fix Search widget align in topnav Fix pull-right-md class in archive template

--- a/sources/less/global.less
+++ b/sources/less/global.less
@@ -138,6 +138,14 @@ table td {
 	padding: 13px 0;
 }
 
+#topnav-wrapper .widget_search {
+  margin-top: 7px;
+}
+
+#topnav-wrapper .widget_search label {
+  margin: 0;
+}
+
 /* End Top Navigation */
 
 
@@ -220,6 +228,10 @@ table td {
 
 .main-navigation .dropdown-menu > li > a {
   padding: 5px 15px;
+}
+
+#header-3 .main-navigation .navbar-right {
+  margin-right: 0;
 }
 
 /* End Navbar */
@@ -834,7 +846,9 @@ ins {
     display: none !important;
   }
 
-  .blog .pull-right-md {
+  .blog .pull-right-md,
+  .archive .pull-right-md,
+  .category .pull-right-md {
     float: right;
   }
 
